<resources>
    <string name="app_name"><![CDATA[Books & Movies]]></string>
    <string name="action_settings">Settings</string>
    <string name="theater">Theater</string>
    <string name="action_about">About</string>
    <string name="action_home">Home</string>
    <string name="action_books">Books</string>
    <string name="action_movies">Movies</string>
    <string name="about_author">Luis Antonio Galindo Castro</string>
    <string name="about_appName"><![CDATA[Books & Movies]]></string>
    <string name="about_about">Diplomado en desarrollo de aplicaciones móviles: Android</string>
    <string name="about_version">Módulo 2</string>
    <string name="home_intro">Welcome to the nerd\'s movies and books guide</string>
    <string name="book">Book</string>
</resources>
