<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_books"
        android:icon="@drawable/ic_books"
        android:title="@string/action_books"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_movies"
        android:icon="@drawable/ic_movies"
        android:title="@string/action_movies"
        app:showAsAction="always|withText" />
</menu>
